--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,23 @@
     font-family: sans-serif;
 }
 
+/* shared section  */
+.btn-primary {
+    border-radius: 48px;
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+    padding: 20px 30px;
+    border: 0;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 30px;
+}
+.btn{
+    background: #4EC5F7;
+    margin-left: 10px;
+}
+
 nav {
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
@@ -41,6 +58,7 @@ nav {
     display: flex;
     align-items: center;
     margin-right: 100px;
+    gap: 24px;
 }
 
 .nav-container a {
@@ -53,11 +71,57 @@ nav {
 
 .nav-container li {
     list-style: none;
-    margin-right: 20px;
+    /* margin-right: 20px; */
 }
 
 nav ul .follow-on {
     border-radius: 8px;
     background: rgba(11, 2, 35, 0.10);
     padding: 18px 120px 18px 24px;
+}
+
+/* this is for banner section  */
+.banner-content {
+    width: 700px;
+    height: 600px;
+    background-image: url('../images/Group\ 14.png');
+    background-repeat: no-repeat;
+    padding: 100px 200px;
+}
+
+.banner-container {
+    display: flex;
+    gap: 20px;
+
+}
+
+.banner-container .tree {
+    width: 600px;
+    height: 100vh;
+    margin-right: 100px;
+
+}
+
+.banner-content-title {
+    color: #0B0223;
+    font-size: 48px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.banner-goat {
+    font-size: 95px;
+    font-weight: 800;
+    text-transform: uppercase;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.banner-description {
+    color: #534C64;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
 }
