--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,8 @@
     text-transform: uppercase;
     margin-top: 30px;
 }
-.btn{
+
+.btn {
     background: #4EC5F7;
     margin-left: 10px;
 }
@@ -124,4 +125,49 @@ nav ul .follow-on {
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 10px;
+}
+
+/* this is for funny videos section  */
+.funny-videos-container {
+    /* text-align: center; */
+    margin: 0 200px 100px 200px;
+}
+
+.funny-videos-container .video-title {
+    text-align: center;
+    color: #0B0223;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.funny-videos-container .video-title span {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.video-description {
+    text-align: center;
+    color: #534C64;
+    font-size: 18px;
+    margin: 15px 0 50px;
+}
+
+.video-image-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.video-image img {
+    width: 250px;
+    height: 300px;
+}
+
+.video-image p {
+    color: #534C64;
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 20px;
 }
