--- a/styles/style.css
+++ b/styles/style.css
@@ -171,3 +171,51 @@ nav ul .follow-on {
     font-weight: 500;
     margin-top: 20px;
 }
+
+/* this is for online games section  */
+.online-games-container {
+    display: flex;
+    gap: 200px;
+    align-items: center;
+    margin: 0 180px;
+}
+
+.online-games-container .large-pic {
+    width: 600px;
+    height: 600px;
+}
+
+.online-games-container .small-pic {
+    width: 280px;
+    height: 280px;
+    background: #FFF;
+    position: relative;
+    bottom: 220px;
+    left: 430px;
+
+}
+.online-games-content{
+    margin-bottom: 200px;
+}
+
+.online-games-title {
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 60px;
+    color: #0B0223;
+}
+
+.online-games-title span {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+}
+.online-games-description{
+    color: #534C64;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px; 
+margin-top: 20px;
+}
