--- a/styles/style.css
+++ b/styles/style.css
@@ -221,6 +221,36 @@ nav ul .follow-on {
     margin-top: 20px;
 }
 
+/* this is for game section  */
+.game-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    padding: 120px 0;
+    flex-wrap: wrap;
+    margin-top: -150px;
+}
+
+.game-image {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    background: #FFF;
+    padding: 10px 20px;
+
+}
+.game-image:hover{
+    border: 1px solid #FF42A5 ;
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+cursor: pointer;
+}
+
+
 /* this is footer section  */
 footer {
     color: #FFF;
