--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@
     font-weight: 600;
     text-transform: uppercase;
     margin-top: 30px;
+    cursor: pointer;
 }
 
 .btn {
@@ -72,13 +73,20 @@ nav {
 
 .nav-container li {
     list-style: none;
-    /* margin-right: 20px; */
 }
 
 nav ul .follow-on {
     border-radius: 8px;
     background: rgba(11, 2, 35, 0.10);
-    padding: 18px 120px 18px 24px;
+    padding: 5px 20px 10px;
+    
+}
+nav .follow-on-image{
+    
+    width: 35px;
+    height: 30px;
+    
+    
 }
 
 /* this is for banner section  */
