--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,9 @@
 }
 
 /* shared section  */
+.hide{
+    display: none;
+}
 .btn-primary {
     border-radius: 48px;
     background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
@@ -33,7 +36,7 @@ nav {
     align-items: center;
     padding: 40px 0 40px 200px;
     gap: 0 10px;
-    width: 40%;
+    
 }
 
 .nav-title-container img {
